--- a/index.html
+++ b/index.html
@@ -1,153 +1,1 @@
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />		<title>Pub Karen 大人の隠れ家”Pub Karen”へようこそ。</title>
-        <meta name="Keywords" content="karen, かれん, 水道橋, 隠れ家">
-        <meta name="Description" CONTENT="総武線水道橋駅から徒歩３分。喧騒を離れてひとときの安らぎを。大人の隠れ家”Pub Karen”へようこそ。">
-		<link rel="stylesheet" type="text/css" href="/css/main.css" /><script type="text/javascript" src="/js/jquery-1.4.4.js"></script><script type="text/javascript" src="/js/function.js"></script>		<script type="text/javascript" src="/js/fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
-		<script type="text/javascript" src="/js/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
-		<link rel="stylesheet" type="text/css" href="/js/fancybox/jquery.fancybox-1.3.4.css" media="screen" />
-		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-	<!--[if IE 6]>
-	<script src="/js/DD_belatedPNG.js"></script>
-	<script>
-	DD_belatedPNG.fix('.png');
-	</script>
-	<![endif]-->
-	</head>
-	<body>
-		<div id="Wrapper">
-		<div id="MainBg">
-			<h1><img src="/img/header.gif" alt="総武線水道橋駅から徒歩３分。喧騒を離れてひとときの安らぎを。大人の隠れ家”Pub Karen”へようこそ。" /></h1>
-
-<div class="section" id="Asagaya">
-	<div class="text">
-		<p class="textDetail">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-		<div class="spec">
-			<div class="shopdate">
-				<h3>SHOP DATE</h3>
-				<ul>
-					<li>東京都千代田区三崎町3-3-17 A・B River 水道橋ビル B101</li>
-					<li>水道橋駅より徒歩3分 <a href="#asagayaMap" class="gmapLink">▶Google Map</a></li>
-					<li>TEL：03-6265-8234</li>
-					<li>営業時間：18:00〜24:00</li>
-					<li>mail: <a href="mailto:excellent4747@yahoo.co.jp">excellent4747@yahoo.co.jp</a></li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	<div class="mainImg"><img src="/img/1_img.jpg" alt="阿佐谷ドローバー" /></div>
-</div>
-
-<div style="width:1px;height:1px;visibility:hidden;position:absolute;top:0px;width:600px;height:400px;">
-<div id="asagayaMap" class="gmapContents"></div>
-</div>
-
-<div style="width:1px;height:1px;visibility:hidden;position:absolute;top:0px;width:600px;height:400px;">
-<div id="kouenjiMap" class="gmapContents"></div>
-</div>
-
-<div class="bottomBlock">
-	<div class="menu">
-		<div class="mama">
-			<h3 class="title1">ママのプロフィール</h3>
-			<div class="mamaContent">
-				<div class="leftArea">
-
-				</div>
-				<div class="rightArea">
-					<ul>
-						<li>加藤 容子</li>
-						<li>1961年12月30日 やぎ座 B型</li>
-						<li>山崎学園 富士見中学高等学校 卒業</li>
-						<li>国士舘大学 体育学部 体育学科 新体操専攻</li>
-						<li>保健体育科 中学 高校教諭免許</li>
-						<li>高校より新体操を始める 大学では インカレ 全日本選手権など出場</li>
-						<li>デンマーク スイス オランダに遠征</li>
-						<li>大学卒業後 キッズ チャイルド ジュニア新体操の指導者として現在に至る</li>
-						<li>現在 公立中学 部活動指導</li>
-						<li>障害をお持ちの方のトレーニング指導</li>
-						<li>趣味でソシアルダンスをはじめて7年 楽しく danceの出来ることが幸せです。</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-
-		<div class="list drink">
-			<h3 class="title1">メニュー</h3>
-			<div class="left">
-				<dl>
-					<dt>ドリンク</dt>
-					<dd><span class="mname">バドワイザー</span><span class="price">￥500</span></dd>
-					<dd><span class="mname">コロナ</span><span class="price">￥800</span></dd>
-					<dd><span class="mname">ビール（中）</span><span class="price">￥800</span></dd>
-					<dd><span class="mname">グラスワイン</span><span class="price">￥800</span></dd>
-					<dd><span class="mname">ウィスキー S</span><span class="price">￥500</span></dd>
-					<dd><span class="mname">ウィスキー W</span><span class="price">￥800</span></dd>
-					<dd><span class="mname">ハイボール</span><span class="price">￥800</span></dd>
-					<dd><span class="mname">バーボン S</span><span class="price">￥500</span></dd>
-					<dd><span class="mname">バーボン W</span><span class="price">￥800</span></dd>
-					<dd><span class="mname">日本酒</span><span class="price">￥800</span></dd>
-					<dd><span class="mname">ソフトドリンク</span><span class="price">￥500</span></dd>
-				</dl>
-			</div>
-			<div class="right">
-				<dl>
-					<dt>キープボトル</dt>
-					<dd><span class="mname">焼酎（甲類）</span><span class="price">￥3,000</span></dd>
-					<dd><span class="mname">焼酎（麦）</span><span class="price">￥5,000</span></dd>
-					<dd><span class="mname">焼酎（芋）</span><span class="price">￥5,000</span></dd>
-					<dd><span class="mname">ホワイトホース</span><span class="price">￥5,000</span></dd>
-					<dd><span class="mname">アーリータイムス</span><span class="price">￥5,000</span></dd>
-					<dd><span class="mname">IWハーパー</span><span class="price">￥5,000</span></dd>
-					<dd><span class="mname">フォアロゼス</span><span class="price">￥5,000</span></dd>
-					<dd><span class="mname">オールドパー</span><span class="price">￥8,000</span></dd>
-					<dd><span class="mname">ワイルドターキー</span><span class="price">￥8,000</span></dd>
-					<dd><span class="mname">VSOP</span><span class="price">￥8,000</span></dd>
-					<dd><span class="mname">ヘネシー</span><span class="price">￥10,000</span></dd>
-					<dd><span class="mname">カミュー</span><span class="price">￥10,000</span></dd>
-				</dl>
-			</div>
-
-		</div>
-<!-- 		<div class="list food">
-			<h2><img src="/img/foodmenu.png" class="png" alt="フードメニュー" /></h2>
-			<dl>
-			<dd><span class="mname">チーわさ</span><span class="price">￥200</span></dd><dd><span class="mname">チャーシュー豆腐</span><span class="price">￥400</span></dd><dd><span class="mname">オイルサーディン缶グリル</span><span class="price">￥500</span></dd><dd><span class="mname">ケーキ</span><span class="price">￥5000</span></dd>			</dl>
-		</div> -->
-	</div>
-	<div class="link">
-		<h3 class="title1">占い</h3>
-        <ul>
-        	<li><img src="/img/renge.jpg" alt="れんげ" /><b>占い師 れんげ</b></li>
-        </ul>
-        <p>恋愛、仕事、総合から生活にまつわるお悩みについて、楽しくお答えします。<br />
-いいことも悪いことも、生活習慣や行動を少し工夫するだけで改善できるヒントが隠されているかも。<br />
-人生経験豊富な占い師による人生のちょっとしたヒントと心の拠り所にご利用ください。</p>
-		<p>
-			30分 3000円 ドリンク付き<br />
-			昼1時-5時 土日 火金<br />
-			火金土日 PM1時〜５時まで営業<br />
-			予約優先<br />
-			予約: 00-0000-0000
-		</p>
-	</div>
-</div>
-
-<div id="Footer">
-<p>&copy; pub-karen.com</p>
-</div>		</div>
-		</div>
-		<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-9676926-1");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-<br>
-	</body>
-</html>
+pub-karen.com
