--- a/index_20150628.html
+++ b/index_20150628.html
@@ -101,7 +101,7 @@
 					<dd><span class="mname">フォアローゼス W</span><span class="price">￥2000</span></dd>
 					<dt>ジン</dt>
 					<dd><span class="mname">タンカレーNo10 S</span><span class="price">￥1,000</span></dd>
-					<dd><span class="mname">タンカレーNo10 W</span><span class="price">￥1,000</span></dd>
+					<dd><span class="mname">タンカレーNo10 W</span><span class="price">￥2,000</span></dd>
 
 				</dl>
 			</div>
@@ -111,9 +111,9 @@
 					<dd><span class="mname">真田六文銭（長野県) 1合</span><span class="price">￥1,200</span></dd>
 					<dd><span class="mname">武蔵の里（岡山県） 1合</span><span class="price">￥1,200</span></dd>
 					<dt>焼酎</dt>
-					<dd><span class="mname">山の守（長崎県） 麦</span><span class="price">￥1,200</span></dd>
-					<dd><span class="mname">壱岐（長崎県） 麦</span><span class="price">￥1,200</span></dd>
-					<dd><span class="mname">きらら S</span><span class="price">￥1,200</span></dd>
+					<dd><span class="mname">山の守（長崎県） 麦 S</span><span class="price">￥1,200</span></dd>
+					<dd><span class="mname">壱岐（長崎県） 麦 S</span><span class="price">￥1,200</span></dd>
+					<dd><span class="mname">きらら（山形県） 米 S</span><span class="price">￥1,200</span></dd>
 					<dt>ソフトドリンク</dt>
 					<dd><span class="mname">コーラ</span><span class="price">￥700</span></dd>
 					<dd><span class="mname">ジンジャーエール</span><span class="price">￥700</span></dd>
@@ -131,6 +131,7 @@
 			</div>
 
 		</div>
+		<p>※カラオケ無料</p>
 <!-- 		<div class="list food">
 			<h2><img src="/img/foodmenu.png" class="png" alt="フードメニュー" /></h2>
 			<dl>
