--- a/index_20150628.html
+++ b/index_20150628.html
@@ -74,6 +74,7 @@
 						<li>障害をお持ちの方のトレーニング指導</li>
 						<li>趣味でソシアルダンスをはじめて7年 楽しく danceの出来ることが幸せです。</li>
 					</ul>
+					<p style="margin-top:10px">※毎週木曜日15:00からストレッチ教室を開催しています。</p>
 				</div>
 			</div>
 		</div>
